<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CommonText"
    android:backgroundTint="@color/Primary3"
    android:textAlignment="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/login_edtx_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo_gold" />

    <EditText
        android:id="@+id/login_edtx_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/Primary4"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/login_txbox_userhint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/CommonText"
        android:textColorHint="@color/Greyed2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_edtx_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_edtx_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/Primary4"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/login_txbox_passhint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/CommonText"
        android:textColorHint="@color/Greyed2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/Primary4"
        android:onClick="login"
        android:text="@string/login_btn_login"
        android:textColor="@color/CommonText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_lang"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/icon_es_es"
        android:backgroundTintMode="add"
        android:fadingEdge="none"
        android:onClick="ChangeLang"
        android:tag="es"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>